@@ -645,6 +645,27 @@ lpd_queue(const char *hostname,		/* I - Host to connect to */
 	close(fd);
 	fd = -1;
 
+	if (getenv("CLASS") != NULL)
+	{
+	 /*
+          * If the CLASS environment variable is set, the job was submitted
+	  * to a class and not to a specific queue.  In this case, we want
+	  * to abort immediately so that the job can be requeued on the next
+	  * available printer in the class.
+	  */
+
+          fprintf(stderr, "INFO: Unable to connect to %s, queuing on next printer in class...\n",
+		  hostname);
+
+	 /*
+          * Sleep 5 seconds to keep the job from requeuing too rapidly...
+	  */
+
+	  sleep(5);
+
+          return (1);
+	}
+
 	if (error == ECONNREFUSED || error == EHOSTDOWN ||
             error == EHOSTUNREACH)
 	{
